<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/soso_settings_category_player">
        <CheckBoxPreference
            android:key="player_continuation"
            android:title="@string/soso_settings_title_player_continuation"
            android:summary="@string/soso_settings_summary_player_continuation"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="player_nextfile_auto_playback"
            android:title="@string/soso_settings_title_nextfile_auto_playback"
            android:summary="@string/soso_settings_summary_nextfile_auto_playback"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="player_use_ffmpeg_progress"
            android:title="@string/soso_settings_title_use_ffmpeg_progress"
            android:summary="@string/soso_settings_summary_use_ffmpeg_progress"
            android:defaultValue="true"
            />
        <CheckBoxPreference
            android:key="player_keep_last_playbackspeed"
            android:title="@string/soso_settings_title_keep_last_playbackspeed"
            android:summary="@string/soso_settings_summary_keep_last_playbackspeed"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/soso_settings_category_subtitle">
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="subtitle_foregroundcolor"
            android:title="@string/soso_settings_title_subtitle_foregroundcolor"
            android:summary="@string/soso_settings_summary_subtitle_foregroundcolor"
            android:defaultValue="@color/white"
            alphaSlider="true"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="subtitle_backgroundcolor"
            android:title="@string/soso_settings_title_subtitle_backgroundcolor"
            android:summary="@string/soso_settings_summary_subtitle_backgroundcolor"/>
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="subtitle_windowcolor"
            android:title="@string/soso_settings_title_subtitle_windowcolor"
            android:summary="@string/soso_settings_summary_subtitle_windowcolor"
            android:defaultValue="@color/black"/>
        <ListPreference
            android:key="subtitle_edgetype"
            android:title="@string/soso_settings_title_subtitle_edgetype"
            android:summary="@string/soso_settings_summary_subtitle_edgetype"
            android:entries="@array/subtitle_edgetype"
            android:entryValues="@array/subtitle_edgetype"
            android:defaultValue="None"/>
            />
        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="subtitle_edgecolor"
            android:title="@string/soso_settings_title_subtitle_edgecolor"
            android:summary="@string/soso_settings_summary_subtitle_edgecolor"
            android:defaultValue="@color/white"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/soso_settings_category_info">
        <Preference android:title="@string/soso_settings_category_info_license"
            android:key="info_license"></Preference>
    </PreferenceCategory>
</PreferenceScreen>